--- a/animals/style.css
+++ b/animals/style.css
@@ -4,8 +4,6 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-html,
-body,
 h1,
 p {
     margin: 0;
@@ -17,83 +15,22 @@ body {
     background-image: url("images/bg.png");
 }
 
-.animal-wrap {
+.wrapper {
     width: 300px;
     margin: 100px auto;
 }
+.ground {
+    background-image: url(images/green.png);
+    background-repeat: repeat-x;
 
-.animal-images img {
-    display: block;
-    margin: auto;
-}
-
-.land-img {
-    width: 100%;
-    height: 50px;
-}
-
-.animal-text {
     background-color: #9d6135;
-    padding: 10px 20px 30px 20px;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
+    color: #d6bfb2;
+    padding: 80px 30px 30px 30px;
+    border-radius: 0 0 26px 26px;
     border-bottom: 10px solid #4a260b;
 }
 
-.animal-text h1 {
+.ground h1 {
     color: white;
-    padding-bottom: 10px;
+    margin-bottom: 14px;
 }
-
-.animal-text p {
-    color: #d6bfb2;
-}
-
-/* 
-
-
-* {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-html,
-body,
-h1,
-p {
-  margin: 0;
-}
-
-body {
-  background-color: black;
-  background-image: url("images/bg.png");
-}
-
-.wrapper {
-  margin: 100px auto;
-  width: 800px;
-}
-
-.imgs img {
-  display: block;
-}
-
-.land {
-  width: auto;
-}
-
-.descript {
-  background-color: #9d6135;
-  border-bottom: 10px solid #4a260b;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  padding: 10px 20px 30px 20px;
-}
-
-.descript h1 {
-  margin-bottom: 10px;
-  color: white;
-}
-
-.descript p {
-  color: #d6bfb2;
-} */
