--- a/login/style.css
+++ b/login/style.css
@@ -39,36 +39,35 @@ a {
     margin: 20px;
     padding: 19px 16px;
     width: 350px;
-    height: 140px;
+    height: fit-content;
 
     background-color: white;
     border: 1px solid #dbdbdb;
     border-radius: 5px;
 }
 
+.txt-info {
+    margin-bottom: 16px;
+}
+
 .btn-login {
-    position: relative;
-    top: 16px;
-    width: 318px;
-    height: 40px;
+    margin-bottom: 16px;
+    padding: 15px;
+    width: 100%;
+    min-height: 40px;
     text-align: center;
+    overflow: hidden;
 
     background-color: #711bff;
     border: transparent;
-    border-radius: 2px;
+    border-radius: 4px;
 
     color: white;
 }
 
 .btn-login img {
-    display: inline-block;
     vertical-align: -3.6px;
     width: 64px;
-}
-
-.menu {
-    position: relative;
-    top: 30px;
 }
 
 .menu * {
@@ -95,4 +94,10 @@ a {
 
 .join a {
     margin-left: 4px;
+}
+
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
 }
