--- a/bucketlist/style.css
+++ b/bucketlist/style.css
@@ -1,71 +1,66 @@
-/* reset */
-* {
-    font-family: Arial;
-    box-sizing: border-box;
+:root {
+    font-family: "arial";
 }
 
-ul,
-h1 {
+h1,
+ol {
     margin: 0;
     padding: 0;
 }
 
-h1 {
-    font-size: initial;
-    font-weight: initial;
-}
-
-ul {
+li {
     list-style: none;
-    padding-left: 0px;
 }
 
 /* component */
 body {
-    background-color: #dddddd;
+    background-color: #ddd;
 }
 
 .wrapper {
-    background-color: white;
     width: 400px;
     margin: 100px auto;
+}
+
+.buckets {
+    background-color: white;
     border-radius: 30px;
-    box-shadow: 2px 2px 10px rgb(0, 0, 0, 0.2);
+    overflow: hidden;
 }
 
-.header {
-    padding: 35px 0;
-    border-bottom: 4px solid #dddddd;
+.buckets-header {
+    border-bottom: 4px solid #ddd;
+    padding: 40px 0;
+    color: deeppink;
 }
 
-.header__title {
-    color: #ff1493;
-    font-size: 27px;
-    font-weight: 800;
-    border-left: 10px solid #ff1493;
-    padding-left: 24px;
+.buckets-header h1 {
+    line-height: 1;
+    border-left: 10px solid;
+    padding-left: 20px;
 }
 
-.main__list {
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
+.buckets-contents {
     background-color: #efefef;
     padding: 30px;
 }
 
-.main__list__item {
+.lists li {
     background-color: white;
-    list-style: none;
-    padding: 10px 14px;
-    border: 4px solid #aaaaaa;
-    border-radius: 5px;
+    border: 4px solid #ddd;
+    padding: 10px;
+    border-radius: 4px;
 }
 
-.main__list__item:not(:last-of-type) {
-    margin-bottom: 12px;
+.lists li + li {
+    margin-top: 10px;
 }
 
-.main__list__item:nth-child(2) {
-    color: #1e91ff;
-    border: 4px solid #1e91ff;
+.lists li:hover {
+    box-shadow: inset 0 0 10px 2px #ddd;
+}
+
+.lists li.active {
+    border-color: dodgerblue;
+    color: dodgerblue;
 }
