--- a/zigzag/style.css
+++ b/zigzag/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap");
-
 :root {
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
@@ -9,16 +7,6 @@
 	*/
 }
 
-h1,
-h2 {
-    margin: 0;
-    padding: 0;
-}
-
-ul {
-    list-style: none;
-}
-
 body {
     background-color: #673399;
 }
@@ -26,33 +14,51 @@ body {
 .wrapper {
     width: 1080px;
     margin: 0 auto;
-    border: 1px dashed antiquewhite;
+    color: white;
 }
 
 .header {
-    margin: 100px auto;
     display: flex;
-    color: white;
     align-items: center;
+    border: 3px solid red;
 }
 
 .header-title {
-    width: 26%;
     font-size: 40px;
-    font-weight: 700;
+    font-weight: 500;
+    width: 26%;
+}
+
+.header-title span {
+    position: relative;
+    display: inline-block;
+}
+
+.header-title span::after {
+    content: " ";
+    display: inline-block;
+    width: 100%;
+    height: 40%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    background-color: orangered;
 }
 
 .header-content {
-    font-size: 14px;
-    line-height: 1.6;
     display: flex;
     align-items: center;
+    font-size: 14px;
+    line-height: 1.5;
+    position: relative;
 }
 
 .header-content::before {
-    content: "";
-    margin: 0 30px;
+    content: " ";
+    display: block;
     width: 100px;
-    height: 0px;
-    border: 0.5px solid antiquewhite;
+    height: 1px;
+    background-color: white;
+    margin: 0 30px;
 }
