--- a/zigzag/style.css
+++ b/zigzag/style.css
@@ -6,6 +6,17 @@
 	font-weight: 700;
 	*/
 }
+h1,
+h2,
+p {
+    margin: initial;
+    padding: initial;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+}
 
 body {
     background-color: #673399;
@@ -14,18 +25,19 @@ body {
 .wrapper {
     width: 1080px;
     margin: 0 auto;
-    color: white;
 }
 
+/* header */
 .header {
+    margin: 100px auto;
     display: flex;
     align-items: center;
-    border: 3px solid red;
 }
 
 .header-title {
     font-size: 40px;
     font-weight: 500;
+    color: white;
     width: 26%;
 }
 
@@ -47,6 +59,7 @@ body {
 }
 
 .header-content {
+    color: #bd8fe8;
     display: flex;
     align-items: center;
     font-size: 14px;
@@ -58,7 +71,81 @@ body {
     content: " ";
     display: block;
     width: 100px;
-    height: 1px;
-    background-color: white;
+    height: 3px;
+    background-color: #bd8fe8;
     margin: 0 30px;
 }
+/* //header */
+
+/* main */
+.main {
+    margin: 100px auto;
+}
+/* project-list */
+.project-item {
+    margin: 24px auto;
+}
+/* //project-list */
+
+/* project-item */
+.project-item {
+    display: flex;
+}
+
+.project-deco {
+    width: 26%;
+    position: relative;
+    overflow: hidden;
+}
+.project-keyword {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    background-color: rgba(103, 51, 153, 0.5);
+
+    font-size: 30px;
+    color: white;
+}
+.project-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.project-contents {
+    padding: 24px;
+    width: 74%;
+    background-color: white;
+}
+
+.project-title {
+    color: #673399;
+    margin-bottom: 32px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.content-list {
+    font-size: 14px;
+    line-height: 2;
+}
+
+.content {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.content::before {
+    content: " ";
+    display: block;
+    margin-right: 10px;
+    width: 10px;
+    height: 10px;
+    background-color: #bd8fe8;
+    border-radius: 100%;
+}
+/* //project-item */
