--- a/zigzag/style.css
+++ b/zigzag/style.css
@@ -1,30 +1,8 @@
-:root {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    /*
-	font-weight: 500;
-	font-weight: 700;
-	*/
-}
-
-* {
-    box-sizing: border-box;
-}
-
-h1,
-h2,
-p {
-    margin: initial;
-    padding: initial;
-}
-
-ul {
-    list-style: none;
-    padding-left: 0;
-}
-
 body {
     background-color: #673399;
+    font-family: "Montserrat", "sans-serif";
+    font-weight: 500;
+    line-height: 1.8;
 }
 
 .wrapper {
@@ -40,10 +18,11 @@ body {
 }
 
 .header-title {
+    width: 26%;
+    color: white;
     font-size: 40px;
     font-weight: 500;
-    color: white;
-    width: 26%;
+    line-height: 1.2;
 }
 
 .header-title span {
@@ -64,22 +43,24 @@ body {
 }
 
 .header-content {
-    color: #bd8fe8;
-    width: 50%;
+    width: 52%;
     display: flex;
+    position: relative;
+    top: 5px;
     align-items: center;
+    color: #bd8fe8;
     font-size: 14px;
     line-height: 1.6em;
-    position: relative;
 }
 
 .header-content::before {
     content: " ";
-    display: block;
+    display: inline-block;
     width: 300px;
     height: 2px;
     background-color: #bd8fe8;
-    margin-right: 25px;
+    background-color: #fff;
+    margin: 0px 24px 0px 2px;
 }
 /* //header */
 
@@ -117,6 +98,7 @@ body {
     background-color: rgba(103, 51, 153, 0.5);
 
     font-size: 30px;
+    font-weight: 500;
     color: white;
 }
 .project-img {
