--- a/login/style/style.css
+++ b/login/style/style.css
@@ -12,79 +12,42 @@
 }
 
 body {
+    background: #f2f2f2;
+
     font-family: "Spoqa Han Sans Neo", "sans-serif";
-    font-size: 12px;
+    font-size: 16px;
     font-weight: 400;
-    line-height: 15px;
+    line-height: 20px;
 }
 
 .cont-login {
-    width: 350px;
-    margin: 50px auto;
-    padding: 18px 15px 17px;
-    border: 1px solid #dbdbdb;
+    width: 500px;
+    height: 240px;
+    padding: 29px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    background: white;
+    border: 1px solid #c4c4c4;
     border-radius: 5px;
 }
 
-.txt-login {
-    margin-bottom: 16px;
+.cont-login .txt-login {
+    margin: 25px 0px 31px;
 }
 
-.cont-login .link-login {
-    display: block;
-    padding: 13px 20px 12px;
-    margin-bottom: 17px;
+.btn-login {
+    width: 100%;
+    padding: 17px 15px 15px;
 
-    background-color: #711bff;
-    border-radius: 4px;
+    background: #2f80ed;
+    border-radius: 5px;
+
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 28px;
     color: white;
-
-    text-decoration: none;
-    text-align: center;
-    font-weight: 500;
-}
-
-.link-login .img-login {
-    width: 57px;
-    height: 11px;
-    margin-right: 6px;
-}
-
-.cont-login .find {
-    float: left;
-}
-
-.cont-login .find * {
-    float: left;
-}
-
-.cont-login .join {
-    float: right;
-    margin-right: 1px;
-}
-
-.cont-login .join * {
-    float: left;
-}
-
-.cont-login .img-find,
-.cont-login .img-join {
-    width: 16px;
-    height: 16px;
-    margin-right: 4px;
-}
-
-.find [class^="link"],
-.join [class^="link"] {
-    color: #767676;
-    text-decoration: none;
-}
-
-.find .link-id::after {
-    display: inline-block;
-    content: "";
-    width: 1px;
-    height: 11px;
-    background-color: #767676;
-    margin: 0 6px 0 5px;
 }
